# GraspGen

./: README.md  pyproject.toml
grasp_gen/: __init__.py  grasp_server.py  robot.py
grasp_gen/assets/objects/: example_object.pcd
grasp_gen/assets/xarm/: xarm_gripper.urdf
grasp_gen/config/: __init__.py
grasp_gen/config/grippers/: franka_panda.py  robotiq_2f_140.py  single_suction_cup_30mm.py  xarm_gripper.py  xarm_gripper.yaml
scripts/: create_grasp_sim_usd.py  demo_collision_free_grasps.py  run_grasp_sim_omniverse.py
tests/: test_grasp_config_loader.py
